--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
           ref: staging
       - name: Reset staging branch
         run: |
-          git fetch origin staging:staging
-          git reset --hard staging
+          git fetch origin develop:develop
+          git reset --hard develop
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
